# soft-error-tools

./: .gitignore  readme.md
ImmortalTool/: .gitignore  CMakeLists.txt  Doxyfile  Makefile
ImmortalTool/benchmarks/: all_benchmarks.txt  basic_benchmarks.txt  foo.txt  medium_benchmarks.txt  results_basic.ods  results_medium.ods  results_standard.ods  run_benchmarks.py  standard_benchmarks.txt  test.input
ImmortalTool/benchmarks/all_benchmark_results/: .~lock.results_all.ods#  results_all.ods  uci5-stla0-50.out
ImmortalTool/benchmarks/all_benchmark_results/csv/: corr-stla1-10.csv  corr-stla1-50.csv  corr-stla1-90.csv  mc10.csv  mc15-stla1-50-incompl.csv  mc7-stla1-50-incompl.csv  mc7-stla1-90-incompl.csv  mc90.csv  sim0-100.csv  (+10 more)
ImmortalTool/benchmarks/scripts/: run_sim0_10.py  run_sim0_50.py  run_sta0_50.py  run_sta0_90.py  run_sta1_10.py  run_sta1_50.py  run_sta1_90.py  run_sta2_10.py  run_sta2_50.py  run_sta2_90.py  run_stla0_50.py  run_stla1_10.py
ImmortalTool/ext_tools/: install_blimc.sh  install_cppunit.sh  install_ic3.sh  install_lingeling.sh
ImmortalTool/ext_tools/not_(yet)_used/: install_aiger.sh~  install_all.sh  install_blimc.sh  install_bloqqer.sh  install_depqbf.sh  install_ic3.sh  install_lingeling.sh  install_minisat.sh  install_picosat.sh  install_qbfcert.sh  install_qube.sh  install_synt_check.sh
ImmortalTool/src/: AIG2CNF.cpp  AIG2CNF.h  AigSimulator.cpp  AigSimulator.h  AndCache.cpp  AndCache.h  AndCacheFor2Simulators.cpp  AndCacheFor2Simulators.h  AndCacheMap.cpp  AndCacheMap.h  BackEnd.cpp  BackEnd.h  CMakeLists.txt  CNF.cpp  CNF.h  ErrorTraceManager.cpp  ErrorTraceManager.h  FalsePositives.cpp  FalsePositives.h  LingelingApi.cpp  LingelingApi.h  Logger.cpp  Logger.h  Main.cpp  MiniSatApi.h  Options.cpp  Options.h  PicoSatApi.cpp  SatSolver.cpp  SatSolver.h  SimulationBasedAnalysis.cpp  SimulationBasedAnalysis.h  StringUtils.h  SuperFluousTrace.cpp  SuperFluousTrace.h  SymbTimeAnalysis.cpp  SymbTimeAnalysis.h  SymbTimeLocationAnalysis.cpp  SymbTimeLocationAnalysis.h  SymbolicSimulator.cpp  (+6 more)
ImmortalTool/templates/: TemplateClass.cpp  TemplateClass.h  TemplateTestclass.cpp  TemplateTestclass.h  build.xml  createExtrasources.pl
ImmortalTool/tests/: CMakeLists.txt  CppunitTest.cmake  TestAigSimulator.cpp  TestAigSimulator.h  TestAigToCNF.cpp  TestEnvironmentModel.cpp  TestEnvironmentModel.h  TestFalsePositives.cpp  TestFalsePositives.h  TestFreeInputs.cpp  TestFreeInputs.h  TestSimulationBasedAnalysis.cpp  TestSimulationBasedAnalysis.h  TestSymbTimeAnalysis.cpp  TestSymbTimeAnalysis.h  TestSymbTimeLocationAnalysis.cpp  TestSymbTimeLocationAnalysis.h  cppunit_create_testfile.cmake  extrasources.make
ImmortalTool/tests/inputs/: 1latch_1and.orig.aag  3_bit_input_1  3_bit_input_2  3_bit_input_3  3_bit_input_4  3_bit_input_5  3b_w_free_inputs  5_bit_input_shuffle1  5_bit_input_shuffle2  5_bit_input_shuffle3  C17_orig.aig  beecount-synth.2vul.1l.aig  buffer.unprot.aag  env1.aag  ex5.2vul.1l.aig  ex5.2vul.2l.aig  inverter.unprot.aag  irrelevant_latches.prot.aag  irrelevant_latches.prot.delay1.aag  irrelevant_latches.prot.delay1.useinput.aag  iwls02texasa.2vul.1l.aag  minmax2_orig.aig  minmax2_orig.out.shuffle1  minmax2_orig.out.shuffle3  minmax2_orig.protected.aag  minmax2_perfect.aag  one_bit_in_is_not_out.aag  one_latch.fp.aag  one_latch.fp2.aag  one_latch.orig.aag  one_latch.protected.aag  s5378.50percent.aag  shiftreg.3vul.0l.aig  toggle.3vulnerabilities.aag  toggle2l.aag  traffic-synth.5vul.1l.aig  two_latches.protected.aag  two_latches.unprotected.aag
OpenSEA/: .gitignore  CMakeLists.txt  Doxyfile  HowToCompile.md  Makefile
OpenSEA/benchmarks/: .~lock.results_standard.ods#  hard_benchmarks_1.txt  log_to_table.py  out_to_csv.sh  pipe_adders.txt  results_all.ods  run_benchmarks.py
OpenSEA/benchmarks/all_benchmark_results/: results_all.ods
OpenSEA/benchmarks/scripts/: run_sim0_90.py  run_sta0_10.py  run_stla0_10.py  run_stla0_90.py  run_stla1_50.py  run_stla1_90.py
OpenSEA/ext_tools/: .gitignore  install_aiger.sh  install_all.sh  install_cudd.sh  install_minisat.sh  install_picosat.sh  old_install_cppunit.sh  old_install_minisat.sh  patch_minisat.sh
OpenSEA/ext_tools/not_(yet)_used/: install_abc.sh  install_iprover.sh  install_qbfcert2.sh  install_rareqs.sh  install_vl2mv.sh
OpenSEA/src/: AIG2CNF.cpp  AigSimulator.cpp  AndCacheFor2Simulators.cpp  BackEnd.cpp  BackEnd.h  BddAnalysis.cpp  BddAnalysis.h  BddSimulator.cpp  BddSimulator.h  BddSimulator2.cpp  BddSimulator2.h  CMakeLists.txt  CNF.cpp  CNF.h  CnfUtils.cpp  CnfUtils.h  DefinitelyProtected.cpp  DefinitelyProtected.h  ErrorTraceManager.cpp  FalsePositives.cpp  FalsePositives.h  LingelingApi.cpp  LingelingApi.h  Logger.cpp  Logger.h  MiniSatApi.cpp  Options.cpp  Options.h  PicoSatApi.h  SatAssignmentParser.cpp  SatAssignmentParser.h  SimulationBasedAnalysis.cpp  SimulationBasedAnalysis.h  Stopwatch.cpp  Stopwatch.h  StringUtils.cpp  SuperFluousTrace.h  SymbTimeAnalysis.cpp  SymbTimeAnalysis.h  SymbTimeLocationAnalysis.cpp  (+10 more)
OpenSEA/templates/: TemplateClass.cpp
OpenSEA/tests/: CMakeLists.txt  Main.cpp  TestAigSimulator.cpp  TestAigSimulator.h  TestAigToCNF.h  TestBdd.cpp  TestBdd.h  TestDefinitelyProtected.cpp  TestDefinitelyProtected.h  TestEnvironmentModel.cpp  TestFalsePositives.cpp  TestFreeInputs.cpp  TestFreeInputs.h  TestSimulationBasedAnalysis.cpp  TestSymbTimeAnalysis.cpp  TestSymbTimeAnalysis.h  TestSymbTimeLocationAnalysis.cpp  extrasources.make
OpenSEA/tests/inputs/: 1latch_1and.protected.aag  1latch_1and.unprotected.aag  35_bit_input_1  35_bit_input_2  3b  3b_w_free_inputs  c.orig.aag  env_3inputs_mustbe1.aag  env_buffer.aag  inverter.unprot.aag  irrelevant_latches.orig.aag  minmax2_orig.aig.diff1  minmax2_orig.out.shuffle2  one_latch.fp3.aag  one_latch.unprotected.aag  protected_IWLS_2005_AIG_s208.aig  s208_concretesat.input  s208_concreteunsat.input  s208_open.input  s27.1vul.1l  shiftreg.2vul.1l.aig  toggle.1vulnerability.aag  toggle.2vulnerabilities.aag  toggle.3vulnerabilities.aag  toggle.aag  toggle.perfect.aag  toggle.perfect_2step.aag  two_latches.orig.aag
(+139 files in other folders)
