project(demiurge)
set (PROJECT demiurge)
set(VERSION 1.2.0)
cmake_minimum_required(VERSION 2.6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread")

set(AIGER_INCLUDE_DIR    $ENV{DEMIURGETP}/aiger-1.9.4/)
set(AIGER_LIBRARIES      $ENV{DEMIURGETP}/aiger-1.9.4/aiger.o)
set(DEPQBF_INCLUDE_DIR   $ENV{DEMIURGETP}/depqbf/)
set(DEPQBF_LIBRARIES     $ENV{DEMIURGETP}/depqbf/libqdpll.a)
set(RAREQS_INCLUDE_DIR   $ENV{DEMIURGETP}/rareqs/)
set(RAREQS_LIBRARIES     $ENV{DEMIURGETP}/rareqs/librareqs.a)
set(BLOQQER_INCLUDE_DIR  $ENV{DEMIURGETP}/bloqqer/)
set(BLOQQER_LIBRARIES    $ENV{DEMIURGETP}/bloqqer/libbloqqer.a)
set(LINGELING_INCLUDE_DIR  $ENV{DEMIURGETP}/lingeling/code/)
set(LINGELING_LIBRARIES    $ENV{DEMIURGETP}/lingeling/code/liblgl.a)
set(MINISAT_INCLUDE_DIR  $ENV{DEMIURGETP}/minisat/)
set(MINISAT_LIBRARIES  $ENV{DEMIURGETP}/minisat/core/lib.a)
set(PICOSAT_INCLUDE_DIR  $ENV{DEMIURGETP}/picosat/)
set(PICOSAT_LIBRARIES  $ENV{DEMIURGETP}/picosat/libpicosat.a)
set(cppunit_BIN_DIRS     $ENV{DEMIURGETP}/cppunit-1.12.1/bin/ )
set(cppunit_INCLUDE_DIRS $ENV{DEMIURGETP}/cppunit-1.12.1/include/ )
set(cppunit_LIBRARIES   $ENV{DEMIURGETP}/cppunit-1.12.1/lib/libcppunit.so )

add_subdirectory(src)
add_subdirectory(tests)

## how are shared libraries found ?
if(APPLE)
  set(LD_LIB_VAR "DYLD_LIBRARY_PATH")
else(APPLE)
  set(LD_LIB_VAR "LD_LIBRARY_PATH")
endif(APPLE)