project(immortal)
set (PROJECT immortal)
set(VERSION 1.2.0)
cmake_minimum_required(VERSION 2.6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread")

set(AIGER_INCLUDE_DIR    $ENV{IMMORTALTP}/aiger-1.9.4/)
set(AIGER_LIBRARIES      $ENV{IMMORTALTP}/aiger-1.9.4/aiger.o)
#set(DEPQBF_INCLUDE_DIR   $ENV{IMMORTALTP}/depqbf/)
#set(DEPQBF_LIBRARIES     $ENV{IMMORTALTP}/depqbf/libqdpll.a)
#set(RAREQS_INCLUDE_DIR   $ENV{IMMORTALTP}/rareqs/)
#set(RAREQS_LIBRARIES     $ENV{IMMORTALTP}/rareqs/librareqs.a)
#set(BLOQQER_INCLUDE_DIR  $ENV{IMMORTALTP}/bloqqer/)
#set(BLOQQER_LIBRARIES    $ENV{IMMORTALTP}/bloqqer/libbloqqer.a)
set(LINGELING_INCLUDE_DIR  $ENV{IMMORTALTP}/lingeling/code/)
set(LINGELING_LIBRARIES    $ENV{IMMORTALTP}/lingeling/code/liblgl.a)
set(MINISAT_INCLUDE_DIR  $ENV{IMMORTALTP}/minisat/)
set(MINISAT_LIBRARIES  $ENV{IMMORTALTP}/minisat/core/lib.a)
set(PICOSAT_INCLUDE_DIR  $ENV{IMMORTALTP}/picosat/)
set(PICOSAT_LIBRARIES  $ENV{IMMORTALTP}/picosat/libpicosat.a)
set(cppunit_BIN_DIRS     $ENV{IMMORTALTP}/cppunit-1.12.1/bin/ )
set(cppunit_INCLUDE_DIRS $ENV{IMMORTALTP}/cppunit-1.12.1/include/ )
set(cppunit_LIBRARIES   $ENV{IMMORTALTP}/cppunit-1.12.1/lib/libcppunit.so )

add_subdirectory(src)
add_subdirectory(tests)

## how are shared libraries found ?
if(APPLE)
  set(LD_LIB_VAR "DYLD_LIBRARY_PATH")
else(APPLE)
  set(LD_LIB_VAR "LD_LIBRARY_PATH")
endif(APPLE)
