project(immortal)
cmake_minimum_required(VERSION 2.6)
set (PROJECT immortal)
set(VERSION 1.2.0)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread")

set(AIGER_INCLUDE_DIR    $ENV{IMMORTALTP}/aiger-1.9.4/)
set(AIGER_LIBRARIES      $ENV{IMMORTALTP}/aiger-1.9.4/aiger.o)
#set(DEPQBF_INCLUDE_DIR   $ENV{IMMORTALTP}/depqbf/)
#set(DEPQBF_LIBRARIES     $ENV{IMMORTALTP}/depqbf/libqdpll.a)
#set(RAREQS_INCLUDE_DIR   $ENV{IMMORTALTP}/rareqs/)
#set(RAREQS_LIBRARIES     $ENV{IMMORTALTP}/rareqs/librareqs.a)
#set(BLOQQER_INCLUDE_DIR  $ENV{IMMORTALTP}/bloqqer/)
#set(BLOQQER_LIBRARIES    $ENV{IMMORTALTP}/bloqqer/libbloqqer.a)
set(LINGELING_INCLUDE_DIR  $ENV{IMMORTALTP}/lingeling/code/)
set(LINGELING_LIBRARIES    $ENV{IMMORTALTP}/lingeling/code/liblgl.a)
set(MINISAT_INCLUDE_DIR  $ENV{IMMORTALTP}/minisat/)
set(MINISAT_LIBRARIES  $ENV{IMMORTALTP}/minisat/build/release/lib/libminisat.a)
set(PICOSAT_INCLUDE_DIR  $ENV{IMMORTALTP}/picosat/)
set(PICOSAT_LIBRARIES  $ENV{IMMORTALTP}/picosat/libpicosat.a)
set(cppunit_BIN_DIRS     $ENV{IMMORTALTP}/cppunit-1.13.2/bin/ )
set(cppunit_INCLUDE_DIRS $ENV{IMMORTALTP}/cppunit-1.13.2/include/ )
set(cppunit_LIBRARIES   $ENV{IMMORTALTP}/cppunit-1.13.2/lib/libcppunit.so )
set(CUDD_INCLUDE_DIR   $ENV{IMMORTALTP}/cudd/cudd/)
set(CUDD_CPP_INCLUDE_DIR   $ENV{IMMORTALTP}/cudd/cplusplus/)
set(CUDD_LIBRARIES   $ENV{IMMORTALTP}/cudd/cudd/.libs/libcudd.a)

add_subdirectory(src)
add_subdirectory(tests)

## how are shared libraries found ?
if(APPLE)
  set(LD_LIB_VAR "DYLD_LIBRARY_PATH")
else(APPLE)
  set(LD_LIB_VAR "LD_LIBRARY_PATH")
endif(APPLE)
